--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "url": "https://github.com/EvKylin/kylin/issues"
   },
   "homepage": "https://github.com/EvKylin/kylin#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
+  }
 }
