--- a/Example/blog/package.json
+++ b/Example/blog/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.5",
     "date-fns": "^1.29.0",
     "gatsby": "^1.9.247",
@@ -34,7 +35,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0",
+    "gh-pages": "^1.2.0",
     "prettier": "^1.12.0"
   }
 }
