--- a/Example/blog/package.json
+++ b/Example/blog/package.json
@@ -32,7 +32,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "gatsby build --prefix-paths && echo blog.ikylin.me > ./public/CNAME && gh-pages -d public"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0",
