--- a/Example/blog/package.json
+++ b/Example/blog/package.json
@@ -5,21 +5,28 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "chart.js": "^2.7.2",
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "date-fns": "^1.29.0",
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-sass": "^1.0.26",
-    "gatsby-plugin-typography": "^1.7.18",
-    "gatsby-remark-prismjs": "^2.0.2",
-    "gatsby-source-filesystem": "^1.5.35",
-    "gatsby-transformer-remark": "^1.7.41",
-    "prismjs": "^1.14.0",
+    "gatsby": "^2.0.0",
+    "gatsby-link": "^2.0.1",
+    "gatsby-plugin-manifest": "^2.0.2",
+    "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sass": "^2.0.1",
+    "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-remark-prismjs": "^3.0.0",
+    "gatsby-source-filesystem": "^2.0.1",
+    "gatsby-transformer-remark": "^2.1.3",
+    "node-sass": "^4.9.3",
+    "prismjs": "^1.15.0",
     "purecss": "^1.0.0",
     "ramda": "^0.25.0",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-icon-base": "^2.1.2",
+    "react-typography": "^0.16.13",
+    "typography": "^0.16.17",
     "typography-theme-bootstrap": "^0.16.7",
     "typography-theme-github": "^0.15.10"
   },
@@ -35,7 +42,7 @@
     "deploy": "gatsby build --prefix-paths && echo blog.ikylin.me > ./public/CNAME && gh-pages -d public"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0",
-    "prettier": "^1.12.0"
+    "gh-pages": "^2.0.0",
+    "prettier": "^1.14.3"
   }
 }
