--- a/HTML5/AppCache/package.json
+++ b/HTML5/AppCache/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "AppCache",
+  "name": "app-cache",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "body-parser": "~1.20.0",
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.4",
+    "express": "~4.18.2",
+    "pug": "~3.0.2",
+    "morgan": "~1.10.0",
+    "serve-favicon": "~2.5.0"
   }
 }
