--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "12.2.3",
+    "prismjs": "^1.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/remark-prism": "^1.3.3",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
