--- a/site/blog-gatsby/package.json
+++ b/site/blog-gatsby/package.json
@@ -1,50 +1,58 @@
 {
-  "name": "kylin-blog",
-  "description": "Gatsby default starter",
+  "name": "bblog",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "chart.js": "^3.8.0",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.28.0",
-    "gatsby": "^4.20.0",
-    "gatsby-link": "^4.20.0",
-    "gatsby-plugin-manifest": "^4.20.0",
-    "gatsby-plugin-offline": "^5.20.0",
-    "gatsby-plugin-react-helmet": "^5.20.0",
-    "gatsby-plugin-sass":"^5.20.0",
-    "gatsby-plugin-typography": "^4.20.0",
-    "gatsby-remark-prismjs":"^6.20.0",
-    "gatsby-source-filesystem": "^4.20.0",
-    "gatsby-transformer-remark":"^5.20.0",
-    "node-sass": "^7.0.0",
-    "prismjs": "^1.28.0",
-    "purecss": "^2.1.0",
-    "ramda": "^0.28.0",
-    "react": "^18.2.0",
-    "react-dom":  "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-icon-base": "^2.1.2",
-    "react-typography": "^0.16.20",
-    "scrollreveal": "^4.0.4",
-    "typography": "^0.16.17",
-    "typography-theme-bootstrap": "^0.16.7",
-    "typography-theme-github": "^0.16.10"
-  },
+  "private": true,
+  "description": "bblog",
+  "author": "qhan",
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && echo blog.ikylin.me > ./public/CNAME && gh-pages -d public",
-    "gh": "gh-pages -d public"
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "gatsby": "^4.20.0",
+    "gatsby-plugin-image": "^2.20.0",
+    "gatsby-plugin-manifest": "^4.20.0",
+    "gatsby-plugin-mdx": "^3.20.0",
+    "gatsby-plugin-offline": "^5.20.0",
+    "gatsby-plugin-pnpm": "^1.2.10",
+    "gatsby-plugin-react-helmet": "^5.20.0",
+    "gatsby-plugin-sass": "^5.20.0",
+    "gatsby-plugin-sharp": "^4.20.0",
+    "gatsby-plugin-sitemap": "^5.20.0",
+    "gatsby-plugin-typography": "^4.20.0",
+    "gatsby-remark-prismjs": "^6.20.0",
+    "gatsby-source-filesystem": "^4.20.0",
+    "gatsby-transformer-remark": "^5.20.0",
+    "gatsby-transformer-sharp": "^4.20.0",
+    "prismjs": "^1.28.0",
+    "purecss": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icon-base": "^2.1.2",
+    "react-typography": "^0.16.20",
+    "sass": "^1.54.4",
+    "scrollreveal": "^4.0.9",
+    "typography": "^0.16.21",
+    "typography-theme-bootstrap": "^0.16.19",
+    "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
-    "prettier": "^2.7.1"
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.0.16",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-icon-base": "^2.1.4",
+    "@types/scrollreveal": "^0.0.8",
+    "typescript": "^4.7.4"
   }
 }
