--- a/site/blog-gatsby/package.json
+++ b/site/blog-gatsby/package.json
@@ -32,7 +32,6 @@
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
     "prismjs": "^1.28.0",
-    "purecss": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon-base": "^2.1.2",
@@ -45,6 +44,10 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-icon-base": "^2.1.4",
     "@types/scrollreveal": "^0.0.8",
+    "autoprefixer": "^10.4.8",
+    "gatsby-plugin-postcss": "^5.20.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   }
 }
