--- a/site/blog-gatsby/package.json
+++ b/site/blog-gatsby/package.json
@@ -39,6 +39,7 @@
     "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
