--- a/site/blog-gatsby/package.json
+++ b/site/blog-gatsby/package.json
@@ -31,6 +31,7 @@
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "prism-themes": "^1.9.0",
     "prismjs": "^1.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
