--- a/site/blog-gatsby/package.json
+++ b/site/blog-gatsby/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bblog",
+  "name": "blog",
   "version": "1.0.0",
   "private": true,
-  "description": "bblog",
+  "description": "blog",
   "author": "qhan",
   "keywords": [
     "gatsby"
@@ -16,6 +16,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.20.0",
@@ -35,7 +37,6 @@
     "prismjs": "^1.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icon-base": "^2.1.2",
     "sass": "^1.54.4",
     "scrollreveal": "^4.0.9"
   },
@@ -46,7 +47,6 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
-    "@types/react-icon-base": "^2.1.4",
     "@types/scrollreveal": "^0.0.8",
     "autoprefixer": "^10.4.8",
     "gatsby-plugin-emotion": "^7.21.0",
