refactor(site): adjust layout structure

--- a/site/blog-gatsby/package.json
+++ b/site/blog-gatsby/package.json
@@ -43,6 +43,8 @@
   "devDependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
