--- a/node-jit/package.json
+++ b/node-jit/package.json
@@ -5,21 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-modules app.mjs",
+    "start": "node app.js",
     "dev": "pm2 start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jsonwebtoken": "^8.5.0",
-    "koa": "^2.13.4",
+    "@koa/router": "^12.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
-    "koa-jwt": "^4.0.3",
-    "koa-logger": "^3.2.0",
-    "koa-router": "^10.1.1",
+    "koa-jwt": "^4.0.4",
+    "koa-logger": "^3.2.1",
     "koa-static": "^5.0.0",
     "koa-static-router": "^1.5.0",
-    "koa-views": "^8.0.0",
-    "pug": "^3.0.2"
+    "koa-views": "^8.0.0"
   }
 }
