--- a/HTML5/AppCache/package.json
+++ b/HTML5/AppCache/package.json
@@ -6,12 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.20.0",
-    "cookie-parser": "~1.4.6",
-    "debug": "~4.3.4",
-    "express": "~4.18.2",
-    "pug": "~3.0.2",
-    "morgan": "~1.10.0",
-    "serve-favicon": "~2.5.0"
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.4",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2",
+    "serve-favicon": "^2.5.0"
   }
 }
