--- a/HTML5/AppCache/package.json
+++ b/HTML5/AppCache/package.json
@@ -9,9 +9,9 @@
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2",
     "serve-favicon": "^2.5.0"
   }
 }
