--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -38,4 +38,4 @@ jobs:
           external_repository: gh-static-websites/blog
           publish_branch: main
           publish_dir: ./site/blog-gatsby/public
-          cname: blog.qhan.wang
+          cname: qhan.wang
