--- a/site/questionnaire/package.json
+++ b/site/questionnaire/package.json
@@ -1,36 +1,27 @@
 {
-  "name": "nutritional",
-  "version": "0.1.0",
+  "name": "questionnaire",
   "private": true,
-  "devDependencies": {
-    "react-scripts": "5.0.1"
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-weui": "^1.2.3",
-    "redux": "^4.2.1",
     "weui": "^2.5.16"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-weui": "^1.0.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.60.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
