--- a/site/questionnaire/package.json
+++ b/site/questionnaire/package.json
@@ -9,16 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd-mobile": "^5.28.2",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "react-weui": "^1.2.3",
-    "weui": "^2.5.16"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/react-weui": "^1.0.0",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.60.0",
     "typescript": "^4.9.3",
