--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -9,20 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
+    "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
+    "gray-matter": "^4.0.3",
     "next": "13.2.4",
+    "prism-themes": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
+    "remark-prism": "^1.3.6",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.32",
+    "@types/react-dom": "18.0.11",
+    "@types/remark-prism": "^1.3.4",
+    "@types/scrollreveal": "^0.0.8",
     "autoprefixer": "^10.4.14",
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4",
     "postcss": "^8.4.21",
     "sass": "^1.60.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.1",
+    "typescript": "5.0.3"
   }
 }
