--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@iconify/react": "^4.1.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "gray-matter": "^4.0.3",
