--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.18",
     "@iconify/react": "^4.1.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
@@ -33,6 +32,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "postcss": "^8.4.24",
+    "postcss-import": "^15.1.0",
     "remark-shiki-plugin": "^0.0.6",
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
