--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -7,15 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rm -rf .next"
+    "clean": "rm -rf .next && rm -rf out"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.14",
-    "@iconify/react": "^4.1.0",
+    "@headlessui/react": "^1.7.15",
+    "@iconify/react": "^4.1.1",
     "clsx": "^1.2.1",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.9",
     "gray-matter": "^4.0.3",
-    "next": "13.4.4",
+    "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
@@ -25,17 +25,16 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "postcss": "^8.4.24",
-    "postcss-import": "^15.1.0",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.10",
+    "postcss": "^8.4.26",
     "remark-shiki-plugin": "^0.0.6",
-    "sass": "^1.62.1",
-    "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "sass": "^1.63.6",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.6"
   }
 }
