--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -10,12 +10,12 @@
     "clean": "rm -rf .next && rm -rf out"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "^1.7.17",
     "@iconify/react": "^4.1.1",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "gray-matter": "^4.0.3",
-    "next": "13.4.12",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
@@ -23,18 +23,17 @@
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "20.4.6",
-    "@types/react": "18.2.18",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "postcss": "^8.4.27",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "postcss": "8.4.29",
     "remark-shiki-plugin": "^0.0.6",
-    "sass": "^1.64.2",
-    "tailwindcss": "^3.3.3",
-    "typescript": "5.1.6"
+    "sass": "^1.66.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
