--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -17,6 +17,7 @@
     "gray-matter": "^4.0.3",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
