--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -24,17 +24,18 @@
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
+    "@iconify-json/heroicons": "^1.1.12",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@unocss/postcss": "^0.55.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "postcss": "8.4.29",
     "remark-shiki-plugin": "^0.0.6",
     "sass": "^1.66.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "unocss": "^0.55.7"
   }
 }
