--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.12",
+    "@iconify-json/ri": "^1.1.12",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
