--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -7,13 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rm -rf .next && rm -rf out"
+    "clean": "rm -rf .next && rm -rf node_modules"
   },
   "dependencies": {
     "clsx": "^2.0.0",
-    "dayjs": "^1.11.9",
+    "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
-    "next": "13.4.19",
+    "next": "13.5.2",
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
@@ -27,16 +27,16 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.12",
     "@iconify-json/ri": "^1.1.12",
-    "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@unocss/postcss": "^0.55.7",
-    "autoprefixer": "10.4.15",
+    "@unocss/postcss": "^0.56.1",
+    "autoprefixer": "10.4.16",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "postcss": "8.4.29",
-    "sass": "^1.66.1",
+    "eslint-config-next": "13.5.2",
+    "postcss": "8.4.30",
+    "sass": "^1.68.0",
     "typescript": "5.2.2",
-    "unocss": "^0.55.7"
+    "unocss": "^0.56.1"
   }
 }
