--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
+    "impress.js": "^1.1.0",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
