--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -22,6 +22,7 @@
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-reading-time": "^2.0.1",
     "remark-rehype": "^11.0.0",
     "shiki": "^0.14.4"
   },
