--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -18,11 +18,13 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "rehype-pretty-code": "^0.10.1",
+    "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-reading-time": "^2.0.1",
     "remark-rehype": "^11.0.0",
+    "remark-toc": "^9.0.0",
     "shiki": "^0.14.4"
   },
   "devDependencies": {
