--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
