--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -36,6 +36,7 @@
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
     "@unocss/postcss": "^0.56.5",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
