--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
