--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
-    "next": "13.5.4",
+    "next": "13.5.6",
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
@@ -21,28 +21,27 @@
     "react-use": "^17.4.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.0.0",
-    "rehype-pretty-code": "^0.10.1",
+    "rehype-shikiji": "^0.6.10",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^3.0.1",
     "remark-rehype": "^11.0.0",
-    "remark-toc": "^9.0.0",
-    "shiki": "^0.14.4"
+    "remark-toc": "^9.0.0"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.12",
+    "@iconify-json/heroicons": "^1.1.13",
     "@iconify-json/ri": "^1.1.12",
-    "@types/node": "20.8.3",
-    "@types/react": "18.2.25",
-    "@types/react-dom": "18.2.11",
+    "@types/node": "20.8.7",
+    "@types/react": "18.2.29",
+    "@types/react-dom": "18.2.14",
     "@unocss/postcss": "^0.56.5",
     "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "13.5.6",
     "postcss": "8.4.31",
-    "sass": "^1.69.0",
+    "sass": "^1.69.4",
     "typescript": "5.2.2",
     "unocss": "^0.56.5"
   }
