--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -15,8 +15,8 @@
     "gray-matter": "^4.0.3",
     "next": "13.5.6",
     "next-mdx-remote": "^4.4.1",
+    "nextjs-toploader": "^1.5.3",
     "react": "18.2.0",
-    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
     "reading-time": "^1.5.0",
