--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -16,6 +16,7 @@
     "next": "13.5.6",
     "next-mdx-remote": "^4.4.1",
     "nextjs-toploader": "^1.5.3",
+    "photoswipe": "^5.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
