--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf .next && rm -rf node_modules"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
@@ -17,6 +18,7 @@
     "next-mdx-remote": "^4.4.1",
     "nextjs-toploader": "^1.6.4",
     "photoswipe": "^5.4.3",
+    "plyr": "^3.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use": "^17.4.2",
