--- a/site/blog/tsconfig.json
+++ b/site/blog/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/web": ["./app/(web)/*"],
+      "@/eg": ["./app/(eg)/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
