--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -38,4 +38,5 @@ jobs:
           external_repository: gh-static-websites/blog
           publish_branch: main
           publish_dir: ./site/blog-gatsby/public
-          cname: me.qhan.wang
+          cname: gatsby.qhan.wang
+          
