--- a/site/blog-gatsby/package.json
+++ b/site/blog-gatsby/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-manifest": "^5.8.0",
     "gatsby-plugin-mdx": "^5.8.0",
     "gatsby-plugin-offline": "^6.8.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.8.1",
     "gatsby-plugin-sitemap": "^6.8.0",
     "gatsby-remark-prismjs": "^7.8.0",
