--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -30,7 +30,8 @@
     "remark": "^15.0.1",
     "remark-gfm": "^3.0.1",
     "remark-rehype": "^11.1.0",
-    "remark-toc": "^9.0.0"
+    "remark-toc": "^9.0.0",
+    "weixin-js-sdk": "^1.6.5"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.19",
