--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
+    "@shikijs/rehype": "^1.1.7",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
@@ -24,11 +25,12 @@
     "react-use": "^17.5.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-shikiji": "^0.10.2",
+    "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-github-alerts": "^0.0.4",
     "remark-rehype": "^11.1.0",
     "remark-toc": "^9.0.0"
   },
