feat(site/blog): update dependencies and replace github alerts

--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "gray-matter": "^4.0.3",
-    "next": "14.1.0",
+    "next": "14.1.3",
     "next-mdx-remote": "^4.4.1",
     "nextjs-toploader": "^1.6.6",
     "photoswipe": "^5.4.3",
@@ -25,29 +25,28 @@
     "react-use": "^17.5.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^3.0.1",
-    "remark-github-alerts": "^0.0.4",
+    "remark-gh-alerts": "^0.0.3",
     "remark-rehype": "^11.1.0",
     "remark-toc": "^9.0.0"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.20",
-    "@iconify-json/ri": "^1.1.19",
-    "@types/node": "20.11.10",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
+    "@iconify-json/ri": "^1.1.20",
+    "@types/node": "20.11.25",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
     "@unocss/postcss": "^0.58.5",
     "@vercel/analytics": "^1.2.2",
-    "autoprefixer": "10.4.17",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "8.4.33",
+    "autoprefixer": "10.4.18",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3",
+    "postcss": "8.4.35",
     "sass": "^1.71.1",
-    "typescript": "5.3.3",
+    "typescript": "5.4.2",
     "unocss": "^0.58.5"
   }
 }
