--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
-    "@shikijs/rehype": "^1.20.0",
+    "@shikijs/rehype": "^1.22.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
-    "next": "14.2.13",
+    "next": "14.2.14",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
-    "nextjs-toploader": "^3.6.15",
+    "nextjs-toploader": "^3.7.15",
     "photoswipe": "^5.4.4",
     "plyr": "^3.7.8",
     "react": "18.3.1",
@@ -32,22 +32,23 @@
     "remark-gfm": "^4.0.0",
     "remark-gh-alerts": "^0.0.3",
     "remark-rehype": "^11.1.1",
-    "remark-toc": "^9.0.0"
+    "remark-toc": "^9.0.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.0",
     "@iconify-json/ri": "^1.2.0",
-    "@types/node": "22.7.4",
-    "@types/react": "18.3.10",
+    "@types/node": "22.7.5",
+    "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
-    "@unocss/postcss": "^0.63.0",
+    "@unocss/postcss": "^0.63.4",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "14.2.14",
     "postcss": "8.4.47",
     "sass": "^1.79.4",
     "typescript": "5.6.2",
-    "unocss": "^0.63.0"
+    "unocss": "^0.63.4"
   }
 }
