--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -15,14 +15,14 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
-    "next": "15.1.3",
+    "next": "^15.1.3",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "photoswipe": "^5.4.4",
     "plyr": "^3.7.8",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
@@ -43,9 +43,9 @@
     "@types/react-dom": "19.0.2",
     "@unocss/postcss": "^0.65.3",
     "@vercel/analytics": "^1.4.1",
-    "autoprefixer": "10.4.20",
-    "eslint": "9.17.0",
-    "eslint-config-next": "15.1.3",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
+    "@eslint/eslintrc": "^3.2.0",
     "postcss": "8.4.49",
     "sass": "^1.83.1",
     "typescript": "5.7.2",
