--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -11,44 +11,51 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
-    "@shikijs/rehype": "^1.26.1",
+    "@shikijs/rehype": "^3.2.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
-    "next": "^15.1.3",
+    "next": "^15.2.4",
     "next-mdx-remote": "^5.0.0",
-    "next-themes": "^0.4.4",
-    "nextjs-toploader": "^3.7.15",
+    "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "photoswipe": "^5.4.4",
     "plyr": "^3.7.8",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-use": "^17.6.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-gh-alerts": "^0.0.3",
-    "remark-rehype": "^11.1.1",
+    "remark-rehype": "^11.1.2",
     "remark-toc": "^9.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/ri": "^1.2.5",
-    "@types/node": "22.10.5",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
-    "@unocss/postcss": "^0.65.3",
-    "@vercel/analytics": "^1.4.1",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
-    "@eslint/eslintrc": "^3.2.0",
-    "postcss": "8.4.49",
-    "sass": "^1.83.1",
-    "typescript": "5.7.2",
-    "unocss": "^0.65.3"
+    "@types/node": "22.14.0",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
+    "@unocss/postcss": "66.1.0-beta.10",
+    "@vercel/analytics": "^1.5.0",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "^15.2.4",
+    "postcss": "8.5.3",
+    "sass": "^1.86.3",
+    "typescript": "5.8.3",
+    "unocss": "66.1.0-beta.10"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "core-js",
+      "sharp"
+    ]
   }
 }
