--- a/solana/package.json
+++ b/solana/package.json
@@ -14,6 +14,7 @@
     "@solana/web3.js": "^1.98.2"
   },
   "devDependencies": {
+    "@types/node": "^22.15.18",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
