feat(site/blog): adjust sitemap

--- a/site/blog/package.json
+++ b/site/blog/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
-    "@shikijs/rehype": "^3.2.1",
+    "@shikijs/rehype": "^3.8.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
-    "next": "^15.2.4",
+    "next": "^15.4.4",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
@@ -33,29 +33,31 @@
     "remark-gh-alerts": "^0.0.3",
     "remark-rehype": "^11.1.2",
     "remark-toc": "^9.0.0",
-    "sharp": "^0.34.1"
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/ri": "^1.2.5",
-    "@types/node": "22.14.0",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
-    "@unocss/postcss": "66.1.0-beta.10",
+    "@types/node": "24.1.0",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@unocss/postcss": "66.3.3",
     "@vercel/analytics": "^1.5.0",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "^15.2.4",
-    "postcss": "8.5.3",
-    "sass": "^1.86.3",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.4",
+    "postcss": "8.5.6",
+    "sass": "^1.89.2",
     "typescript": "5.8.3",
-    "unocss": "66.1.0-beta.10"
+    "unocss": "66.3.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
       "core-js",
-      "sharp"
+      "esbuild",
+      "sharp",
+      "unrs-resolver"
     ]
   }
 }
